--- a/Gas Prices Workbook_kcw.ipynb
+++ b/Gas Prices Workbook_kcw.ipynb
@@ -2228,7 +2228,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cleaned_df.to_csv('./gas_prices_cleaned.csv',index=False, header=)"
+   ]
   },
   {
    "cell_type": "code",
