--- a/Gas Prices Workbook_kcw.ipynb
+++ b/Gas Prices Workbook_kcw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        "4                                                NaN                                   "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "4                                                NaN                                   "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "5                                                NaN                                   "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
        "5                                                NaN                                   "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1817,7 @@
        "[1379 rows x 16 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1835,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1859,7 @@
        " 'Weekly U.S. No 2 Diesel Low Sulfur (15-500 ppm) Retail Prices  (Dollars per Gallon)': 'no_2_diesel_low_sulfur_(15-500_ppm)'}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2012,10 +2012,194 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "1         date all_grades_all_formulations all_grades_conventional  \\\n",
+       "224 1994-11-28                       1.117                   1.175   \n",
+       "225 1994-12-05                       1.127                   1.143   \n",
+       "226 1994-12-12                       1.131                   1.118   \n",
+       "227 1994-12-19                       1.134                   1.099   \n",
+       "228 1994-12-26                       1.125                   1.088   \n",
+       "\n",
+       "1   all_grades_reformulated regular_all_formulations regular_conventional  \\\n",
+       "224                   1.259                    1.105                1.082   \n",
+       "225                   1.254                    1.103                1.075   \n",
+       "226                   1.231                    1.095                1.064   \n",
+       "227                   1.216                    1.087                1.056   \n",
+       "228                   1.213                    1.077                1.044   \n",
+       "\n",
+       "1   regular_reformulated midgrade_all_formulations midgrade_conventional  \\\n",
+       "224                1.149                     1.197                 1.174   \n",
+       "225                1.169                     1.197                 1.167   \n",
+       "226                1.167                     1.188                 1.156   \n",
+       "227                1.167                     1.179                 1.147   \n",
+       "228                1.165                     1.171                 1.136   \n",
+       "\n",
+       "1   midgrade_reformulated premium_all_formulations premium_conventional  \\\n",
+       "224                 1.249                    1.303                 1.27   \n",
+       "225                 1.272                    1.301                 1.26   \n",
+       "226                 1.268                    1.288                1.244   \n",
+       "227                 1.262                    1.279                1.233   \n",
+       "228                 1.265                     1.27                1.222   \n",
+       "\n",
+       "1   premium_reformulated no_2_diesel no_2_diesel_ultra_low_sulfur_(0-15_ppm)  \\\n",
+       "224                1.351       1.126                                     NaN   \n",
+       "225                 1.37       1.123                                     NaN   \n",
+       "226                1.363       1.114                                     NaN   \n",
+       "227                 1.36       1.109                                     NaN   \n",
+       "228                1.358       1.106                                     NaN   \n",
+       "\n",
+       "1   no_2_diesel_low_sulfur_(15-500_ppm)  \n",
+       "224                                 NaN  \n",
+       "225                                 NaN  \n",
+       "226                                 NaN  \n",
+       "227                                 NaN  \n",
+       "228                                 NaN  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clo_rename= clean_dates_df.rename(columns = colu)\n",
+    "clo_rename.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>1</th>\n",
+       "      <th>date</th>\n",
+       "      <th>all_grades_all_formulations</th>\n",
+       "      <th>all_grades_conventional</th>\n",
+       "      <th>all_grades_reformulated</th>\n",
+       "      <th>regular_all_formulations</th>\n",
+       "      <th>regular_conventional</th>\n",
+       "      <th>regular_reformulated</th>\n",
+       "      <th>midgrade_all_formulations</th>\n",
+       "      <th>midgrade_conventional</th>\n",
+       "      <th>midgrade_reformulated</th>\n",
+       "      <th>premium_all_formulations</th>\n",
+       "      <th>premium_conventional</th>\n",
+       "      <th>premium_reformulated</th>\n",
+       "      <th>no_2_diesel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>1994-11-28</td>\n",
+       "      <td>1.117</td>\n",
+       "      <td>1.175</td>\n",
+       "      <td>1.259</td>\n",
+       "      <td>1.105</td>\n",
+       "      <td>1.082</td>\n",
+       "      <td>1.149</td>\n",
+       "      <td>1.197</td>\n",
+       "      <td>1.174</td>\n",
+       "      <td>1.249</td>\n",
+       "      <td>1.303</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>1.351</td>\n",
+       "      <td>1.126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>1994-12-05</td>\n",
+       "      <td>1.127</td>\n",
+       "      <td>1.143</td>\n",
+       "      <td>1.254</td>\n",
+       "      <td>1.103</td>\n",
+       "      <td>1.075</td>\n",
+       "      <td>1.169</td>\n",
+       "      <td>1.197</td>\n",
+       "      <td>1.167</td>\n",
+       "      <td>1.272</td>\n",
+       "      <td>1.301</td>\n",
+       "      <td>1.26</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>1.123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td>1994-12-12</td>\n",
+       "      <td>1.131</td>\n",
+       "      <td>1.118</td>\n",
+       "      <td>1.231</td>\n",
+       "      <td>1.095</td>\n",
+       "      <td>1.064</td>\n",
+       "      <td>1.167</td>\n",
+       "      <td>1.188</td>\n",
+       "      <td>1.156</td>\n",
+       "      <td>1.268</td>\n",
+       "      <td>1.288</td>\n",
+       "      <td>1.244</td>\n",
+       "      <td>1.363</td>\n",
+       "      <td>1.114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>227</th>\n",
+       "      <td>1994-12-19</td>\n",
+       "      <td>1.134</td>\n",
+       "      <td>1.099</td>\n",
+       "      <td>1.216</td>\n",
+       "      <td>1.087</td>\n",
+       "      <td>1.056</td>\n",
+       "      <td>1.167</td>\n",
+       "      <td>1.179</td>\n",
+       "      <td>1.147</td>\n",
+       "      <td>1.262</td>\n",
+       "      <td>1.279</td>\n",
+       "      <td>1.233</td>\n",
+       "      <td>1.36</td>\n",
+       "      <td>1.109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>1994-12-26</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>1.088</td>\n",
+       "      <td>1.213</td>\n",
+       "      <td>1.077</td>\n",
+       "      <td>1.044</td>\n",
+       "      <td>1.165</td>\n",
+       "      <td>1.171</td>\n",
+       "      <td>1.136</td>\n",
+       "      <td>1.265</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>1.222</td>\n",
+       "      <td>1.358</td>\n",
+       "      <td>1.106</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -2047,8 +2231,6 @@
        "      <td>3.39</td>\n",
        "      <td>3.645</td>\n",
        "      <td>3.161</td>\n",
-       "      <td>3.161</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1599</th>\n",
@@ -2066,8 +2248,6 @@
        "      <td>3.395</td>\n",
        "      <td>3.649</td>\n",
        "      <td>3.144</td>\n",
-       "      <td>3.144</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1600</th>\n",
@@ -2085,8 +2265,6 @@
        "      <td>3.385</td>\n",
        "      <td>3.656</td>\n",
        "      <td>3.129</td>\n",
-       "      <td>3.129</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1601</th>\n",
@@ -2104,8 +2282,6 @@
        "      <td>3.391</td>\n",
        "      <td>3.666</td>\n",
        "      <td>3.124</td>\n",
-       "      <td>3.124</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1602</th>\n",
@@ -2123,12 +2299,10 @@
        "      <td>3.4</td>\n",
        "      <td>3.698</td>\n",
        "      <td>3.124</td>\n",
-       "      <td>3.124</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1379 rows × 16 columns</p>\n",
+       "<p>1379 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2184,52 +2358,117 @@
        "1601                 3.507                    3.517                3.391   \n",
        "1602                 3.536                    3.536                  3.4   \n",
        "\n",
-       "1    premium_reformulated no_2_diesel no_2_diesel_ultra_low_sulfur_(0-15_ppm)  \\\n",
-       "224                 1.351       1.126                                     NaN   \n",
-       "225                  1.37       1.123                                     NaN   \n",
-       "226                 1.363       1.114                                     NaN   \n",
-       "227                  1.36       1.109                                     NaN   \n",
-       "228                 1.358       1.106                                     NaN   \n",
-       "...                   ...         ...                                     ...   \n",
-       "1598                3.645       3.161                                   3.161   \n",
-       "1599                3.649       3.144                                   3.144   \n",
-       "1600                3.656       3.129                                   3.129   \n",
-       "1601                3.666       3.124                                   3.124   \n",
-       "1602                3.698       3.124                                   3.124   \n",
+       "1    premium_reformulated no_2_diesel  \n",
+       "224                 1.351       1.126  \n",
+       "225                  1.37       1.123  \n",
+       "226                 1.363       1.114  \n",
+       "227                  1.36       1.109  \n",
+       "228                 1.358       1.106  \n",
+       "...                   ...         ...  \n",
+       "1598                3.645       3.161  \n",
+       "1599                3.649       3.144  \n",
+       "1600                3.656       3.129  \n",
+       "1601                3.666       3.124  \n",
+       "1602                3.698       3.124  \n",
        "\n",
-       "1    no_2_diesel_low_sulfur_(15-500_ppm)  \n",
-       "224                                  NaN  \n",
-       "225                                  NaN  \n",
-       "226                                  NaN  \n",
-       "227                                  NaN  \n",
-       "228                                  NaN  \n",
-       "...                                  ...  \n",
-       "1598                                 NaN  \n",
-       "1599                                 NaN  \n",
-       "1600                                 NaN  \n",
-       "1601                                 NaN  \n",
-       "1602                                 NaN  \n",
-       "\n",
-       "[1379 rows x 16 columns]"
+       "[1379 rows x 14 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaned_df= clean_dates_df.rename(columns = colu)\n",
+    "c_df= clo_rename.drop('no_2_diesel_ultra_low_sulfur_(0-15_ppm)', axis=1)\n",
+    "cleaned_df= c_df.drop('no_2_diesel_low_sulfur_(15-500_ppm)', axis=1)\n",
     "cleaned_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned_df.to_csv('./gas_prices_cleaned.csv',index=False, header=)"
+    "cleaned_df.to_csv('./gas_prices_cleaned.csv',index=False, header= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "con_str = 'postgres:myBailey93!@localhost:5432/etl_project_2'\n",
+    "engine = create_engine(f'postgresql://{con_str}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['gas_prices']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df.to_sql(name='gas_prices', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1379 entries, 224 to 1602\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column                       Non-Null Count  Dtype         \n",
+      "---  ------                       --------------  -----         \n",
+      " 0   date                         1379 non-null   datetime64[ns]\n",
+      " 1   all_grades_all_formulations  1379 non-null   object        \n",
+      " 2   all_grades_conventional      1379 non-null   object        \n",
+      " 3   all_grades_reformulated      1379 non-null   object        \n",
+      " 4   regular_all_formulations     1379 non-null   object        \n",
+      " 5   regular_conventional         1379 non-null   object        \n",
+      " 6   regular_reformulated         1379 non-null   object        \n",
+      " 7   midgrade_all_formulations    1379 non-null   object        \n",
+      " 8   midgrade_conventional        1379 non-null   object        \n",
+      " 9   midgrade_reformulated        1379 non-null   object        \n",
+      " 10  premium_all_formulations     1379 non-null   object        \n",
+      " 11  premium_conventional         1379 non-null   object        \n",
+      " 12  premium_reformulated         1379 non-null   object        \n",
+      " 13  no_2_diesel                  1379 non-null   object        \n",
+      "dtypes: datetime64[ns](1), object(13)\n",
+      "memory usage: 161.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaned_df.info()"
    ]
   },
   {
